[package]
name = "kuchiki"
version = "0.7.2"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
description = "(朽木) HTML/XML tree manipulation library"
repository = "https://github.com/SimonSapin/kuchiki"

[lib]
name = "kuchiki"
doctest = false

[dependencies]
cssparser = "0.25"
matches = "0.1"
html5ever = "0.24"
selectors = "0.21"

[dev-dependencies]
tempdir = "0.3"
